--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@ jobs:
    - pwd
    - cd /home/shopify/public_html/
    - git clone git@git.ebpearls.com:shopify/delish-shopify-vue.git
+   - cd delish-shopify-vue
    - git config user.name "gorakh.shrestha"
    - git config user.email "gorakh.shrestha@ebpearls.com"
    - git pull origin master
