--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "css-loader": "^3.0.0",
     "vue": "^2.6.10",
     "vue-loader": "^15.7.0",
+    "vue-lodash": "^2.0.2",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10",
     "vuedraggable": "^2.23.0",
