--- a/package.json
+++ b/package.json
@@ -10,15 +10,25 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "css-loader": "^3.0.0",
+    "axios": "^0.19.0",
+    "bootstrap-vue": "^2.0.0-rc.25",
     "lodash": "^4.17.11",
     "vue": "^2.6.10",
+    "vue-axios": "^2.1.4",
+    "vue-css-donut-chart": "^1.1.3",
+    "vue-events": "^3.1.0",
     "vue-loader": "^15.7.0",
     "vue-lodash": "^2.0.2",
+    "vue-progressbar": "^0.7.5",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10",
+    "vue-toasted": "^1.1.27",
     "vuedraggable": "^2.23.0",
     "webpack": "^4.35.2",
     "webpack-cli": "^3.3.5"
+  },
+  "devDependencies": {
+    "css-loader": "^3.0.0",
+    "style-loader": "^0.23.1"
   }
 }
