--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-template-compiler": "^2.6.10",
     "vue-toasted": "^1.1.27",
     "vuedraggable": "^2.23.0",
+    "vuejs-dialog": "^1.4.0",
     "webpack": "^4.35.2",
     "webpack-cli": "^3.3.5"
   },
