--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-axios": "^2.1.4",
     "vue-css-donut-chart": "^1.1.3",
     "vue-events": "^3.1.0",
+    "vue-inline-svg": "^1.1.1",
     "vue-loader": "^15.7.0",
     "vue-lodash": "^2.0.2",
     "vue-progressbar": "^0.7.5",
