--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap-vue": "^2.0.0-rc.25",
+    "get-parameter": "^1.0.8",
     "lodash": "^4.17.11",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
