--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "axios": "^0.19.0",
     "bootstrap-vue": "^2.0.0-rc.25",
     "get-parameter": "^1.0.8",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.15",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
     "vue-css-donut-chart": "^1.1.3",
@@ -22,6 +22,7 @@
     "vue-loader": "^15.7.0",
     "vue-lodash": "^2.0.2",
     "vue-progressbar": "^0.7.5",
+    "vue-select": "^3.10.5",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10",
     "vue-toasted": "^1.1.27",
@@ -33,5 +34,8 @@
   "devDependencies": {
     "css-loader": "^3.0.0",
     "style-loader": "^0.23.1"
+  },
+  "optionalDependencies": {
+    "fsevents": "^2.1.3"
   }
 }
