--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apexcharts": "^3.19.3",
     "axios": "^0.19.0",
     "bootstrap-vue": "^2.0.0-rc.25",
+    "chart.js": "^2.9.3",
     "get-parameter": "^1.0.8",
     "lodash": "^4.17.15",
+    "pure-vue-chart": "^0.4.0",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
+    "vue-chartjs": "^3.5.0",
     "vue-css-donut-chart": "^1.1.3",
     "vue-events": "^3.1.0",
     "vue-inline-svg": "^1.1.1",
